--- a/session_24/CS166_Session_24.ipynb
+++ b/session_24/CS166_Session_24.ipynb
@@ -6,7 +6,7 @@
       "name": "CS166 Session 24.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMyyOUPxSas6RVcKC4ic80w",
+      "authorship_tag": "ABX9TyOjakLIScG+k3UmVZxWoS27",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -333,19 +333,19 @@
         "\n",
         "    return np.mean(avg_degrees)\n",
         "\n",
-        "neighbors_degrees(erdos_renyi, \"Erdos-Renyi\")\n",
-        "neighbors_degrees(watts_strogatz, \"Watts Strogatz\")\n",
-        "neighbors_degrees(barabasi_albert, \"Barabasi-Albert\")"
+        "print(neighbors_degrees(erdos_renyi, \"Erdos-Renyi\"))\n",
+        "print(neighbors_degrees(watts_strogatz, \"Watts Strogatz\"))\n",
+        "print(neighbors_degrees(barabasi_albert, \"Barabasi-Albert\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 869
+          "height": 904
         },
         "id": "crXRV26DDIhW",
-        "outputId": "772f47a7-adec-4ba3-852a-478ce9bf672a"
+        "outputId": "890501e5-15d1-45b9-b336-ebe4fd378191"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,6 +360,13 @@
           }
         },
         {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40.969529642455846\n"
+          ]
+        },
+        {
           "output_type": "display_data",
           "data": {
             "text/plain": [
@@ -370,6 +377,13 @@
           "metadata": {
             "needs_background": "light"
           }
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40.179778895402976\n"
+          ]
         },
         {
           "output_type": "display_data",
@@ -384,14 +398,11 @@
           }
         },
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "61.340247443531176"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "61.340247443531176\n"
+          ]
         }
       ]
     },
@@ -403,6 +414,15 @@
       ],
       "metadata": {
         "id": "bjhcBFfhFI5j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For both the Erdos-Renyi and the Watts-Strogatz graph, the average degree is roughly the same (~40 connections). However, the average degree of the graph for Barabasi-Albert is 60, meaning our neighbors are indeed more popular than us."
+      ],
+      "metadata": {
+        "id": "QYwvDqxoFoVL"
       }
     },
     {
